scripts/sample_integration_method_benchmarking/slurm_jobs/logs/err_seqfish_mouse_organogenesis_nichecompass_gcnconv_sample_integration_method_benchmarking_1.txt
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass-reproducibility/scripts/sample_integration_method_benchmarking/../train_nichecompass_benchmarking_models.py", line 741
    model = NicheCompass(adata,
                         ^
SyntaxError: keyword argument repeated: n_layers_encoder
